tests/errors/known_bugs/dicts.py
# pylint: disable=missing-function-docstring, missing-module-docstring
# pylint: disable=pointless-statement

{1: 'one', 2: 'two'}
{a: 2, b:4}
